--- a/Aufgabe2/Aufgabe2.vcxproj
+++ b/Aufgabe2/Aufgabe2.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4BCEEFD0-AF2C-4BF8-8CCA-F29010C648E3}</ProjectGuid>
+    <ProjectGuid>{A1CDA1F5-2D54-4D93-9D1D-D7A51F2843F6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Aufgabe1</RootNamespace>
+    <RootNamespace>Aufgabe2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GradeBook.cpp" />
+    <ClCompile Include="Invoice.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GradeBook.h" />
+    <ClInclude Include="Invoice.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
