--- a/Aufgabe2/Aufgabe2.vcxproj.filters
+++ b/Aufgabe2/Aufgabe2.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="GradeBook.cpp">
+    <ClCompile Include="Invoice.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GradeBook.h">
+    <ClInclude Include="Invoice.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
