--- a/Aufgabe3/Aufgabe3.vcxproj
+++ b/Aufgabe3/Aufgabe3.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{4BCEEFD0-AF2C-4BF8-8CCA-F29010C648E3}</ProjectGuid>
+    <ProjectGuid>{96D55969-798E-4BBC-A7F7-B557C19D6E84}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Aufgabe1</RootNamespace>
+    <RootNamespace>Aufgabe3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GradeBook.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GradeBook.h" />
+    <ClInclude Include="Date.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
